interim version with some ugly styling based on rdfs:isDefinedBy to prove custom filters driving style choices.

--- a/pylode/style/pylode.css
+++ b/pylode/style/pylode.css
@@ -177,3 +177,6 @@
             color: #336;
             text-decoration: none;
         }
+
+        /* highlight imported definition */
+        .importeddef { background: #B88 }
