--- a/pylode/templates/ontdoc/metadata.html
+++ b/pylode/templates/ontdoc/metadata.html
@@ -121,7 +121,11 @@
 <section id="overview">
     <h2>Overview</h2>
     <div class="figure">
-        <div style="width:500px; height:50px; background-color: lightgrey; border:solid 2px grey; padding:10px;margin-bottom:5px; text-align:center;">Pictures say 1,000 words</div>
+        {%- if contextdiagram %}
+            <div><img src="{{ contextdiagram }}"/></div>
+        {%- else %}
+            <div style="width:500px; height:50px; background-color: lightgrey; border:solid 2px grey; padding:10px;margin-bottom:5px; text-align:center;">Pictures say 1,000 words</div>
+        {%- endif %}
         <div class="caption"><strong>Figure 1:</strong> Ontology overview</div>
     </div>
 </section>
