A few extensions: support for transitive profiles, alignment properties (equivalent) and including a contextdiagram is present in working directory, and highlighting objects that are defined in a different ontology.

--- a/pylode/style/pylode.css
+++ b/pylode/style/pylode.css
@@ -180,3 +180,6 @@
 
         /* highlight imported definition */
         .importeddef { background: #B88 }
+
+        /* highlight alignment */
+        .highlight-alignment { background: #8B8 }
