highlight equivalent properties

--- a/pylode/templates/ontdoc/property.html
+++ b/pylode/templates/ontdoc/property.html
@@ -72,7 +72,7 @@
             {%- if equivs|length > 0 %}
             <tr>
                 <th>Equivalent properties</th>
-                <td>
+                <td class="highlight-alignment">
                     {%- for equiv in equivs %}
                     {{ equiv }}
                     {%- endfor %}
